# xyna-tui

./: .gitattributes  .gitignore  DESIGN.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: build-binary.yml
docs/reference/: factory-call.txt  xynafactory.sh.help.txt
fixtures/xyna-cli/: app-mgmt.txt  connectionpools.txt  deployment-context.txt  listappdetails.txt  listapplications.txt  listproperties.txt  listworkspaces.txt  listws-details.txt  object-deps.txt  printdeps.txt  printrevison.txt  runtimecontextdependencies.txt  scope-content.txt  showdeploymentitemdetails.txt  status.txt  trigger-filter.txt  workspace-mgmt.txt  xmom-data.txt
src/xyna_tui/: __init__.py  app.py  dependency_tree.py  fixtures.py  gateway.py  models.py  parsers.py  service.py
src/xyna_tui/screens/: __init__.py  detail_screens.py  dialog_screens.py  overlay_screens.py
tests/e2e/: test_app_e2e.py
tests/unit/: test_dependency_tree.py  test_details_parsers.py  test_fixtures.py  test_mock_gateway.py  test_parsers.py  test_parsers_edge_cases.py  test_service_semantics.py  test_tcp_gateway.py
