[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyna-tui"
version = "0.1.0"
description = "Terminal UI for Xyna Factory operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.77.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
xyna-tui = "xyna_tui.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
